--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -40,6 +40,7 @@
           <div class="robot-tooth"></div>
         </div>
       </div>
+      <div class="ear"></div>
       <div class="robot-ear-left"></div>
       <div class="robot-ear-right"></div>
       <div class="robot-hair-style">
